# rust-launcher

./: .gitignore  README.md  README.ru.md  package-lock.json  package.json
.github/scripts/: read-release-notes.sh
.github/workflows/: build.yml  ci.yml  release-tauri.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 001_initial_schema.sql
backend/src/: config.rs  error.rs  main.rs
backend/src/auth/: mod.rs
backend/src/db/: mod.rs
backend/src/routes/: auth.rs  builds.rs  friends.rs  health.rs  identities.rs  mod.rs  users.rs
deploy/: docker-compose.yml  env.example
deploy/coturn/: turnserver.conf
docs/: build.md
docs/plugins/: API.md  EXAMPLES.md  HOOKS.md  INSTALLATION.md  MANIFEST.md  PERMISSIONS.md  README.md
packaging/archlinux/: 16launcher.desktop  PKGBUILD
src/: App.css  App.tsx  ConsoleApp.tsx  index.css  main.tsx  splitView.ts  uiSounds.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  game-console.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  discord_rpc.rs  ely_auth.rs  game_provider.rs  java_runtime.rs  lib.rs  main.rs  mrpack_open.rs  profile_launch.rs
src/api/: auth.ts  builds.ts  client.ts  friends.ts  index.ts  users.ts
src/components/: ActiveDownloadsPanel.tsx  CloudBuildsModal.tsx  GameConsolePanel.tsx  LauncherBackgroundImage.tsx  account_avatar.tsx  account_skin_preview.tsx  delete_icon.tsx  profile_info_modal.tsx  profile_instance_icon.tsx  selected_profile_title_bar.tsx  tab_split_drop_overlay.tsx
src/hooks/: useDownloadJobs.ts  useHotkeys.ts  (+2 more)
(+154 files in other folders)
